Enum user_role {
  student
  teacher
  superadmin
}

Table users {
  id uuid [pk]
  nama_lengkap text
  email text
  password text
  peran user_role
  nomor_identitas text
  username text
  created_at timestamptz
  foto_profil_url text
  mata_pelajaran text
  kelas_tingkat text
  institusi text
  bahasa text
  notif_email boolean
  notif_inapp boolean
  last_login_at timestamptz
  tanggal_lahir date
  mata_pelajaran_tambahan text
  pengalaman_mengajar int4
  tingkat_ajar text
  rombel_aktif text
  is_wali_kelas boolean
  no_whatsapp text
  bio_singkat text
  is_teacher_verified boolean
  ui_preferences jsonb
}

Table classes {
  id uuid [pk]
  class_name text
  class_code text
  teacher_id uuid
  deskripsi text
  created_at timestamptz
  updated_at timestamptz
  is_archived boolean
  announcement_enabled boolean
  announcement_title text
  announcement_content text
  announcement_tone text
  announcement_starts_at timestamptz
  announcement_ends_at timestamptz
  join_policy text
}

Table class_members {
  id uuid [pk]
  class_id uuid
  user_id uuid
  joined_at timestamptz
  status varchar
  requested_at timestamptz
  approved_at timestamptz
}

Table materials {
  id uuid [pk]
  class_id uuid
  uploader_id uuid
  judul text
  isi_materi text
  file_url text
  created_at timestamptz
  capaian_pembelajaran text
  kata_kunci text[]
  updated_at timestamptz
  display_order int4
}

Table modules {
  id uuid [pk]
  material_id uuid
  nama_modul varchar
  file_url text
  created_at timestamptz
}

Table essay_questions {
  id uuid [pk]
  material_id uuid
  teks_soal text
  created_at timestamptz
  module_id uuid
  level_kognitif text
  ideal_answer text
  keywords text[]
  weight numeric
  rubrics jsonb
  updated_at timestamptz
  round_score_to_5 boolean
  round_score_step float8
}

Table rubrics {
  id uuid [pk]
  question_id uuid
  nama_aspek text
  deskripsi text
  max_score int4
  descriptors jsonb
  bobot float8
  created_at timestamptz
  updated_at timestamptz
}

Table essay_submissions {
  id uuid [pk]
  soal_id uuid
  siswa_id uuid
  teks_jawaban text
  submitted_at timestamptz
  ai_grading_status text
  ai_graded_at timestamptz
  ai_grading_error text
  submission_type text
  attempt_count int4
}

Table ai_results {
  id uuid [pk]
  submission_id uuid
  skor_ai numeric
  umpan_balik_ai text
  raw_response jsonb
  generated_at timestamptz
  logs_rag text
}

Table teacher_reviews {
  id uuid [pk]
  submission_id uuid
  teacher_id uuid
  revised_score numeric
  teacher_feedback text
  created_at timestamptz
  updated_at timestamptz
}

Ref: classes.teacher_id > users.id
Ref: class_members.class_id > classes.id
Ref: class_members.user_id > users.id
Ref: materials.class_id > classes.id
Ref: materials.uploader_id > users.id
Ref: modules.material_id > materials.id
Ref: essay_questions.material_id > materials.id
Ref: essay_questions.module_id > modules.id
Ref: rubrics.question_id > essay_questions.id
Ref: essay_submissions.soal_id > essay_questions.id
Ref: essay_submissions.siswa_id > users.id
Ref: ai_results.submission_id > essay_submissions.id
Ref: teacher_reviews.submission_id > essay_submissions.id
Ref: teacher_reviews.teacher_id > users.id
